@@ -1,3 +1,10 @@
+2005-08-26  Johan Dahlin  <jdahlin@async.com.br>
+
+	* gobject/gobjectmodule.c (pyg_signal_list_ids): Refactor to
+	allow us to list signals on interfaces.
+
+	* tests/test_signal.py (TestList): Two new tests.
+
 2005-08-25  Gustavo J. A. M. Carneiro  <gjc@gnome.org>
 
 	* gobject/gobjectmodule.c (pyg_type_register): Don't g_free
